# JuliaCpp

./: CMakeLists.txt  LICENSE  README.md
include/: juliacpp.hpp
test/: test.cpp  test.jl  testArrays.cpp  testErrors.cpp  testGeneral.cpp
